src/test/deca/context/invalid/ContextSansObjet/OperationsUnaires/Not_Float.deca
//Description:
//  Vérification contextuelle du type de sortie l'opérateur ! sur un type float
//Résultat:
//  Erreur contextuelle
//  ligne 8 : type incompatible

{
   float x = !true;
}